# GmGM-python

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
examples/: README.md  danio_rerio.ipynb  example.ipynb  maintain_sparsity_tests.ipynb  runtime.ipynb  single_cell_multiomics.ipynb  single_cell_transcriptomics.ipynb  synthetic_data.ipynb
examples/other_algs/: EiGLasso.py  README.md  TeraLasso.py  coil.ipynb  lifelines-r.ipynb  lifelines.ipynb  perturbations.ipynb  pr_with_other_algs.ipynb  runtime.ipynb
src/GmGM/: GmGM.py  __init__.py  dataset.py  generate_data.py  numbafied.py  typing.py  validation.py
src/GmGM/core/: core.py  numbafied.py  preprocessing.py  presparse_methods.py  subdivision.py
src/GmGM/extras/: prior.py  regularizers.py
src/GmGM/synthetic/: __init__.py  generate_data.py  validation.py
